--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
+.card {
+    -webkit-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.59);
+    -moz-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.59);
+    box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.59);
+}
+.card-block{
+    padding:0px;
+}
+.bold {
+    font-weight: bold;
+}
+table {
+    margin-bottom: 2px !important;
+}
+.cursor {
+    cursor: pointer;
+}
+.searchParam {
+    padding: .2rem .75rem !important;
+}
+.paramBar {
+    padding: .2rem .75rem;
+}
+.dataTable {
+    width: 100% !important;
+}
+table.dataTable thead th, table.dataTable thead td {
+    padding: .3rem;
+}
+.dataTable .sorting, .sorting_asc, .sorting_desc {
+    background-image: none !important;
+    background-color: #5bc0de!important;
+    color: white !important;
+}
+.dataTables_filter {
+    float: left !important;
+}
+.dataTables_filter input {
+    padding: .2rem .75rem !important;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding: .2em 1em !important;
+}
+table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
+    background-color: white;
+}
+.dataTables_filter input {
+    margin-left: 2px;
+    margin-top: 5px;
+    padding: .5rem .75rem;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #55595c;
+    background-color: #fff;
+    background-image: none;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+}
