--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,13 +77,19 @@
       </div>
       <div class="col-md-6">
         <div class="col-md-4">
-          <b>Case Indicators</b> <i class="fa fa-info-circle text-info" aria-hidden="true"></i>
+          <popover-content #indicatorPopover title="Case Indicators">
+            <p>Here is some popover content</p>
+          </popover-content>
+          <b>Case Indicators</b> <i class="fa fa-info-circle text-info" aria-hidden="true" [popover]="indicatorPopover" [popoverOnHover]="true" popoverPlacement="top"></i>
           <table class="table table-striped table-sm">
             <tr *ngFor="let indicator of case.indicators" [class.table-danger]="indicator.isActive" [class.font-weight-bold]="indicator.isActive"><td>{{indicator.name}}</td></tr>
           </table>
         </div>
         <div class="col-md-4">
-          <b>Case Status</b> <i class="fa fa-info-circle text-info" aria-hidden="true"></i>
+          <popover-content #statusPopover title="Case Status">
+            <p>Here is some popover content</p>
+          </popover-content>
+          <b>Case Status</b> <i class="fa fa-info-circle text-info" aria-hidden="true" [popover]="statusPopover" [popoverOnHover]="true" popoverPlacement="top"></i>
           <table class="table table-striped table-sm">
             <tr><td>EBT</td><td>{{case.caseStatus.ebt}}</td></tr>
             <tr><td>Homeless</td><td>{{case.caseStatus.homeless}}</td></tr>
@@ -92,10 +98,10 @@
           </table>
         </div>
         <div class="col-md-4">
-          <popover-content #myPopover title="To Do List">
+          <popover-content #toDoPopover title="To Do List">
             <p>Here is some popover content</p>
           </popover-content>
-          <b>To Do List</b> <i class="fa fa-info-circle text-info" aria-hidden="true" [popover]="myPopover" [popoverOnHover]="true" popoverPlacement="top"></i>
+          <b>To Do List</b> <i class="fa fa-info-circle text-info" aria-hidden="true" [popover]="toDoPopover" [popoverOnHover]="true" popoverPlacement="top"></i>
           <table class="table table-striped table-sm">
             <tr *ngFor="let toDo of case.toDoList"><td>{{toDo.actionDescription}}</td></tr>
           </table>
